add and handle VAT type to the store
